2008-04-17  Nicolas François  <nicolas.francois@centraliens.net>

	* NEWS, src/newgrp.c: Fix compilation failure when compiled with
	audit support. Thanks to Mike Frysinger for reporting it.

2008-04-16  Nicolas François  <nicolas.francois@centraliens.net>

	Ensure that getpwent() is used in setpwent(), getpwent(),
	endpwend() sequences (ditto for getgrent(), getspent(), and
	getsgent()). The only real (minor) issue was in login, which kept
	the passwd file open.
	* libmisc/entry.c: Remove unneeded setspent() and endspent() (only
	getspnam is called in the middle).
	* libmisc/find_new_ids.c: Make sure to close the password and
	group files with endpwent() and endgrent().
	* libmisc/pwdcheck.c: Remove unneeded endspent() (only getspnam()
	is called before).
	* src/lastlog.c, src/passwd.c, src/groupmod.c, src/faillog.c,
	src/groups.c: Make sure to close
	the password file with endpwent().
	* src/login.c: Remove unneeded setpwent() (only xgetpwnam is
	called before).
	* src/login.c, src/newgrp.c: Fix typos in comments.

2008-04-16  Nicolas François  <nicolas.francois@centraliens.net>

	* NEWS, configure.in: Fix the detection of the audit, pam, and
	selinux. Fail if the feature is requested but the library (or
	header file) could not be found. If nothing is specified, enable
	the feature only if we can find the library (or header file).
	* configure.in: Document --with-selinux as "yes if found" rather
	than "autodetected" for consistency with other options.

2008-04-04  Mark Rosenstand  <mark@borkware.net>

	* NEWS, etc/pam.d/Makefile.am: Add chfn, chsh, and userdel to
	$(pamd_files). Remove the duplicate useradd. And sort
	alphabetically.

2008-04-04  Nicolas François  <nicolas.francois@centraliens.net>

	* NEWS: Prepare next release, 4.1.2.

2008-04-02  Nicolas François  <nicolas.francois@centraliens.net>

	* NEWS, configure.in: Prepare release 4.1.1
	* NEWS: Fix the release date of 4.1.0. Was in 2007, not 2008.
