@@ -46,14 +46,17 @@
       GECOS field.
     </para>
 
-    <para>The only restriction placed on the contents of the fields is that
-      no control characters may be present, nor any of comma, colon, or
-      equal sign. The <emphasis remap='I'>other</emphasis> field does not
-      have this restriction, and is used to store accounting information
-      used by other applications.
+    <para>
+      These fields must not contain any colons. Except for the
+      <emphasis remap='I'>other</emphasis> field, they should not contain
+      any comma or equal sign. It is also recommended to avoid
+      non-US-ASCII characters, but this is only enforced for the phone
+      numbers. The <emphasis remap='I'>other</emphasis> field is used to
+      store accounting information used by other applications.
     </para>
 
-    <para> If none of the options are selected, <command>chfn</command>
+    <para>
+      If none of the options are selected, <command>chfn</command>
       operates in an interactive fashion, prompting the user with the
       current values for all of the fields. Enter the new value to change
       the field, or leave the line blank to use the current value. The
